// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic messages are requeued if the function fails 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "callees": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "callers": Array [
              "root/my_queue",
            ],
            "props": Object {
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "props": Object {
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionId": "root/my_queue/OnMessage-236ff3d72ad0ae46",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;

exports[`basic queue with batch size of 5 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "callees": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "callers": Array [
              "root/my_queue",
            ],
            "props": Object {
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "props": Object {
          "initialMessages": Array [
            "A",
            "B",
            "C",
            "D",
            "E",
            "F",
          ],
          "subscribers": Array [
            Object {
              "batchSize": 5,
              "functionId": "root/my_queue/OnMessage-236ff3d72ad0ae46",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;

exports[`basic queue with default batch size of 1 1`] = `
Object {
  "root": Object {
    "children": Object {
      "my_queue": Object {
        "callees": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "children": Object {
          "OnMessage-236ff3d72ad0ae46": Object {
            "callers": Array [
              "root/my_queue",
            ],
            "props": Object {
              "sourceCodeFile": "assets/OnMessage-236ff3d72ad0ae46/index.js",
              "sourceCodeLanguage": "javascript",
            },
            "type": "wingsdk.cloud.Function",
          },
        },
        "dependsOn": Array [
          "root/my_queue/OnMessage-236ff3d72ad0ae46",
        ],
        "props": Object {
          "subscribers": Array [
            Object {
              "batchSize": 1,
              "functionId": "root/my_queue/OnMessage-236ff3d72ad0ae46",
            },
          ],
          "timeout": 30,
        },
        "type": "wingsdk.cloud.Queue",
      },
    },
    "type": "constructs.Construct",
  },
  "startOrder": Array [
    "root/my_queue/OnMessage-236ff3d72ad0ae46",
    "root/my_queue",
  ],
}
`;
